--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
 testing
+
+<script>
+var xhr = new XMLHttpRequest();
+xhr.open("POST", 'https://api2.branch.io/v1/open', true);
+xhr.setRequestHeader('Content-Type', 'application/json');
+xhr.send(JSON.stringify({
+  "branch_key": "key_live_meVm5mqyiYpUkyxS01H5FpggqqkK29ws",
+  "os":"iOS",
+  "sdk": "ios1.1.1"
+}));
+</script>
