--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
-testing
-
-<script>
-var xhr = new XMLHttpRequest();
-xhr.open("POST", 'https://api2.branch.io/v1/open', true);
-xhr.setRequestHeader('Content-Type', 'application/json');
-xhr.send(JSON.stringify({
-  "branch_key": "key_live_faN5Of01xb3frk1IOKcCpeikCBpyEQQP",
-  "os":"iOS",
-  "sdk": "ios1.1.1"
-}));
-</script>
+<!doctype html>
+<html>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title></title>
+  <script>
+    // load Branch
+    (function(b,r,a,n,c,h,_,s,d,k){if(!b[n]||!b[n]._q){for(;s<_.length;)c(h,_[s++]);d=r.createElement(a);d.async=1;d.src="https://cdn.branch.io/branch-latest.min.js";k=r.getElementsByTagName(a)[0];k.parentNode.insertBefore(d,k);b[n]=h}})(window,document,"script","branch",function(b,r){b[r]=function(){b._q.push([r,arguments])}},{_q:[],_v:1},"addListener applyCode autoAppIndex banner closeBanner closeJourney creditHistory credits data deepview deepviewCta first getCode init link logout redeem referrals removeListener sendSMS setBranchViewData setIdentity track validateCode trackCommerceEvent logEvent disableTracking qrCode".split(" "), 0);
+    // init Branch
+    branch.init('key_live_faN5Of01xb3frk1IOKcCpeikCBpyEQQP');
+  </script>
+</head>
+<body>
+  testing
+</body>
+</html>
